--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,5 @@
+<header></header>
 <div class="container">
-    <div>
-      <img src="logo.png">
-    </div>
-    <div>
-      <h1>SISTEMA ADMINISTRATIVO</h1>
-      <h2>ENCUESTAS DIGITALES</h2>
-    </div>
-    <form class="inicio">
-      <label>User:</label>
-      <input type="text" name="user">
-      <label>Password:</label>
-      <input type="Password" name="pwd">
-      <button>Login</button>
-    </form>
+    <procesos></procesos>
+    <grafico></grafico>
 </div>
-
